--- a/app/src/main/res/layout/item_list_app.xml
+++ b/app/src/main/res/layout/item_list_app.xml
@@ -79,6 +79,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="" />
+        </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/labelDataDir"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:text="DataDir:" />
+                <TextView
+                    android:id="@+id/textViewDataDir"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="" />
 
         </LinearLayout>
     </LinearLayout>
